--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         flex: 1;
       }
     </style>
-  <link rel="icon" href="./favicon.ico" /></head>
+  <link rel="icon" href="/favicon.ico" /></head>
 
   <body>
     <!-- Use static rendering with Expo Router to support running without JavaScript. -->
@@ -32,6 +32,6 @@
     </noscript>
     <!-- The root element for your Expo app. -->
     <div id="root"></div>
-  <script src="./_expo/static/js/web/entry-8b4efde719dc0635a2c7c2fd61e4e673.js" defer></script>
+  <script src="/_expo/static/js/web/entry-8b4efde719dc0635a2c7c2fd61e4e673.js" defer></script>
 </body>
 </html>
